Some basic responsive work on the map. Corrected size of json box to allow for no wrap time.

--- a/css/map.css
+++ b/css/map.css
@@ -23,7 +23,7 @@ h1 {
 	border: 1px solid black;
 	bottom: 60px;
 	right: 50px;
-	width: 410px;
+	width: 425px;
 	height: 300px;
 	background: white;
 	box-shadow: 2px 2px 1px #888888;
@@ -103,3 +103,27 @@ h1 {
 	left: 30px;
 	background: #26ca28;
 }
+
+.expand {
+	display:none;
+	float:right;
+}
+@media (max-width: 550px) {
+	.customMarker {
+		display:none;
+	}
+	.toggles {
+		right:6px;
+		overflow: hidden;
+		height: 33px;
+		width: 135px;		
+	}
+	.expand {
+		display:inline;
+	}
+	.FullHeight {
+		width:calc(100% - 10px);
+		height:170px;
+	}
+}
+
